
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_18__ TYPE_7__ ;
typedef struct TYPE_17__ TYPE_6__ ;
typedef struct TYPE_16__ TYPE_5__ ;
typedef struct TYPE_15__ TYPE_4__ ;
typedef struct TYPE_14__ TYPE_3__ ;
typedef struct TYPE_13__ TYPE_2__ ;
typedef struct TYPE_12__ TYPE_1__ ;


struct TYPE_15__ {char* savestate_thumbnail_file_path; } ;
typedef TYPE_4__ xmb_handle_t ;
struct TYPE_13__ {int state_slot; } ;
struct TYPE_12__ {scalar_t__ savestate_thumbnail_enable; } ;
struct TYPE_16__ {TYPE_2__ ints; TYPE_1__ bools; } ;
typedef TYPE_5__ settings_t ;
struct TYPE_17__ {int path_enabled; int rich_label_enabled; int value_enabled; int sublabel_enabled; char* label; } ;
typedef TYPE_6__ menu_entry_t ;
struct TYPE_14__ {char* savestate; } ;
struct TYPE_18__ {TYPE_3__ name; } ;
typedef TYPE_7__ global_t ;


 TYPE_5__* config_get_ptr () ;
 int fill_pathname_join_delim (char*,char*,char*,char,size_t) ;
 int free (char*) ;
 TYPE_7__* global_get_ptr () ;
 scalar_t__ malloc (size_t) ;
 int menu_entry_get (TYPE_6__*,int ,unsigned int,int *,int) ;
 int menu_entry_init (TYPE_6__*) ;
 scalar_t__ path_is_valid (char*) ;
 int snprintf (char*,size_t,char*,char*,int) ;
 char* strdup (char*) ;
 int string_is_empty (char*) ;
 scalar_t__ string_is_equal (char*,char*) ;
 int strlcat (char*,char*,size_t) ;
 int strlcpy (char*,char*,size_t) ;

__attribute__((used)) static void xmb_update_savestate_thumbnail_path(void *data, unsigned i)
{
   menu_entry_t entry;
   settings_t *settings = config_get_ptr();
   xmb_handle_t *xmb = (xmb_handle_t*)data;

   if (!xmb)
      return;

   menu_entry_init(&entry);
   entry.path_enabled = 0;
   entry.rich_label_enabled = 0;
   entry.value_enabled = 0;
   entry.sublabel_enabled = 0;
   menu_entry_get(&entry, 0, i, ((void*)0), 1);

   if (!string_is_empty(xmb->savestate_thumbnail_file_path))
      free(xmb->savestate_thumbnail_file_path);
   xmb->savestate_thumbnail_file_path = ((void*)0);

   if (!string_is_empty(entry.label))
   {
      if ( (settings->bools.savestate_thumbnail_enable)
            && ((string_is_equal(entry.label, "state_slot"))
               || (string_is_equal(entry.label, "loadstate"))
               || (string_is_equal(entry.label, "savestate"))))
      {
         size_t path_size = 8204 * sizeof(char);
         char *path = (char*)malloc(path_size);
         global_t *global = global_get_ptr();

         path[0] = '\0';

         if (global)
         {
            int state_slot = settings->ints.state_slot;

            if (state_slot > 0)
               snprintf(path, path_size, "%s%d",
                     global->name.savestate, state_slot);
            else if (state_slot < 0)
               fill_pathname_join_delim(path,
                     global->name.savestate, "auto", '.', path_size);
            else
               strlcpy(path, global->name.savestate, path_size);
         }

         strlcat(path, ".png", path_size);

         if (path_is_valid(path))
         {
            if (!string_is_empty(xmb->savestate_thumbnail_file_path))
               free(xmb->savestate_thumbnail_file_path);
            xmb->savestate_thumbnail_file_path = strdup(path);
         }

         free(path);
      }
   }
}
